correct the header ToolBar and button padding and gap

--- a/styles.css
+++ b/styles.css
@@ -95,6 +95,7 @@ header{
     grid-template-rows: 1fr 1fr;
     z-index: 3;
     box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+    padding: 1.5rem 3rem;
     
    
 }
@@ -137,7 +138,7 @@ header{
 
 .accountToolBar{
   display: flex;
-  padding: 1.5rem 2.5rem;
+  padding: 1.5rem 2rem;
   align-items: center;
   justify-content: end;
   column-gap: 2.5rem;
@@ -146,7 +147,7 @@ header{
 
 .mediaNav{
   display: flex;
-  justify-content: space-evenly;
+  justify-content: end;
   padding: 1.5rem 2rem;
   gap: 2rem;
  
